<resources>
    <string name="app_name">Gather</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="bio">Bio</string>
    <string name="create_event">Create Event</string>
    <string name="create">Create</string>

    <string name="event_image">Add Image</string>
    <string name="event_name">Event Name</string>
    <string name="event_size">Size</string>
    <string name="event_location">Location</string>
    <string name="event_time">Time</string>
    <string name="event_date">Date</string>
    <string name="event_cost">Cost</string>
    <string name="event_description">Description</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
</resources>
