<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateEventActivity">

    <Button
        android:id="@+id/createEventBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/createEventCreateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ScrollView
        android:layout_width="415dp"
        android:layout_height="651dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="200dp">

            <Button
                android:id="@+id/createEventAddImageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="50dp"
                android:text="@string/event_image" />

            <TextView
                android:id="@+id/textViewEventName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/createEventAddImageButton"
                android:layout_marginLeft="20dp"
                android:text="@string/event_name"


                />

            <EditText
                android:id="@+id/editTextEventNameInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/createEventAddImageButton"
                android:layout_marginBottom="40dp"
                android:layout_marginLeft="20dp"
                android:layout_toEndOf="@+id/textViewEventName"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name"


                />

            <TextView
                android:id="@+id/textViewEventSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextEventNameInput"
                android:layout_marginLeft="20dp"
                android:text="@string/event_size"

                />

            <EditText
                android:id="@+id/editTextEventSizeInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextEventNameInput"
                android:layout_marginStart="71dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="40dp"
                android:layout_toEndOf="@id/textViewEventSize"
                android:ems="10"
                android:inputType="number"
                android:text="Name" />

            <TextView
                android:id="@+id/textViewEventLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextEventSizeInput"
                android:layout_marginLeft="20dp"
                android:text="@string/event_location" />

            <EditText
                android:id="@+id/editTextEventLocationInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextEventSizeInput"
                android:layout_marginStart="41dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="40dp"
                android:layout_toEndOf="@id/textViewEventLocation"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name" />

            <TextView
                android:id="@+id/textViewEventTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextEventLocationInput"
                android:layout_marginLeft="20dp"
                android:text="@string/event_time" />

            <EditText
                android:id="@+id/editTextEventTimeInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextEventLocationInput"
                android:layout_marginStart="65dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="-1dp"
                android:layout_marginBottom="40dp"
                android:layout_toEndOf="@id/textViewEventTime"
                android:ems="10"
                android:inputType="time"
                android:text="Name" />

            <TextView
                android:id="@+id/textViewEventDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextEventTimeInput"
                android:layout_marginLeft="20dp"
                android:text="@string/event_date" />

            <EditText
                android:id="@+id/editTextEventDateInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextEventTimeInput"
                android:layout_marginStart="67dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="40dp"
                android:layout_toEndOf="@id/textViewEventDate"
                android:ems="10"
                android:inputType="date" />

            <TextView
                android:id="@+id/textViewEventCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextEventDateInput"
                android:layout_marginLeft="20dp"
                android:text="@string/event_cost" />

            <EditText
                android:id="@+id/editTextEventCostInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextEventDateInput"
                android:layout_marginStart="67dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="-2dp"
                android:layout_marginBottom="40dp"
                android:layout_toEndOf="@id/textViewEventDate"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textViewEventDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextEventCostInput"
                android:layout_marginLeft="20dp"
                android:text="@string/event_description" />

            <EditText
                android:id="@+id/editTextEventDescriptionInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextEventCostInput"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@id/textViewEventDescription"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingBottom="40dp"
                android:text="Name" />

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>